# CAVL-assemblyLanguage

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/.hypothesis/constants/: 072a718a3b412fb4  12f76e95454a03f6  1b833cb0ff57ce5b  262fceac9ec3a782  28f0845564a58d83  28f4ba9fbf1d5ba9  3a9d074d4c7cb031  430b6d915a56a446  47c59a3d24b0edbf  558bc509a9a8710e  575fc4f3e34b65d6  5c5680cb4b4e0123  79528c328d5d995e  8d3aee95f122a277  9064301719c1ecbe  9bbd46f4728633f1  a283f6ac9b9ab404  b196bd6af4b789f8  b801f6ddd1c0917e  c18ba6da6e26e19e
backend/.hypothesis/examples/04e6b3400353b141/: 12230387de988354  1863978f3609217f  1ad9163e8a717e7f  1b78267931856bc2  261819e1b9280f46  414605afd0ad1599  50ef6e269fccd338  5f7139c5f9df3efa  61562254822988b3  65c493015e74093f  6e0eb7a679200e73  7ddb381df3c59adb  a311c8d8852df10e  af24e3d5c7eee53e  c03064fd5fec2447  d1fd0a72c0e06dd1  f57ef9f569627d36
backend/.hypothesis/examples/61562254822988b3/: 36dc803ee4e62a3e
backend/.hypothesis/examples/f57ef9f569627d36/: 02f15190f8f8dce0
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: decoder.py  execution.py  heap.py  pipeline.py  step.py
backend/app/services/: __init__.py  asm_injector.py  instruction_decoder.py  mars_executor.py  mips_analyzer.py  output_parser.py  pipeline_simulator.py  state_manager.py  step_executor.py  trace_parser.py
backend/tests/: test_api_routes.py  test_heap_allocator.py  test_mars_executor.py  test_schemas.py  test_state_manager.py  test_trace_parser.py
docs/: ARCHITECTURE.md  (+1 more)
(+41 files in other folders)
